Exemplo de Layout definido com Thymeleaf

--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html th:replace="~{layout :: layout(~{::title}, ~{::main})}" lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Hospebem Registrar</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <title>Registro - Hospebem</title>
 </head>
 <body>
-<header>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="/">
-                <p class="titulo-nav">HospeBem</p>
-            </a>
-        </div>
-    </nav>
-</header>
 
 <main>
     <div class="container card-content valign center has-text-centered">
