--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -115,14 +115,14 @@
                                 <div class="control">
                                     <span>Data do transplante:</span>
                                     <input id="dataTransplante" placeholder="Clique para selecionar uma data"
-                                           type="text" class="input input-fancy datepicker-retroativo" th:field="*{dataTransplante}"
+                                           type="text" class="input input-fancy datepicker-futuro" th:field="*{dataTransplante}"
                                            onkeypress="return false;">
                                 </div>
                             </div>
                         </div>
                         <div class="column">
                             <p>*Órgão:</p>
-                            <div class="select verde-viavida ">
+                            <div class="select verde-viavida">
                                 <select name="orgao">
                                     <option>Selecione o órgão</option>
                                     <option th:value="'coracao'" th:text="Coração"></option>
