--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -30,21 +30,19 @@
                 <td class="column has-text-centered" th:text="${solicitacao.nome}"></td>
                 <td class="column has-text-centered">24</td>
                 <td class="column has-text-centered">
-                    <form th:action="@{/solicitacao/dados}" method="get">
-                        <input type="hidden" name="id" th:value="${solicitacao.id}">
+                    <a th:href="@{/solicitacao/{id}/dados(id=${solicitacao.id})}">
                         <button class="button " type="submit">
                             <i class="fas fa-eye icons-color"></i>
                         </button>
-                    </form>
+                    </a>
                 </td>
 
                 <td>
-                    <form th:action="@{/quartos/listaQuartos}" method="get">
-                        <input type="hidden" name="id" th:value="${solicitacao.id}">
+                    <a th:href="@{/{id}/quartos/listaQuartos(id=${solicitacao.id})}">
                         <button class="button " type="submit">
                             <i>Selecionar quarto</i>
                         </button>
-                    </form>
+                    </a>
                 </td>
             </div>
         </tr>
