<@cassia11, @julianemasrtins>melhora campo de cadeirante e arruma alguns comentários do PR

--- a/app/src/main/resources/static/css/style.css
+++ b/app/src/main/resources/static/css/style.css
@@ -38,6 +38,10 @@ button {
     padding-top: 5vh;
 }
 
+.display-none {
+    display: none;
+}
+
 .botao-esqueci-senha {
     color: rgba(70, 178, 235, 1);
 }
