--- a/app/src/main/resources/templates/solicitacao/dadosHospede.html
+++ b/app/src/main/resources/templates/solicitacao/dadosHospede.html
@@ -12,7 +12,7 @@
 <main>
     <div class="card-content valign center has-text-centered">
         <div class="columns ">
-            <form action="" th:action="@{/solicitacao/editar}" th:object="${solicitacao}" method="post">
+            <form action="" th:action="@{/solicitacao/{id}/detalhesPaciente(id=${solicitacao.id})}" th:object="${solicitante}" method="post">
                 <ul th:object="${formata}">
                     <h2 class="title is-2">Dados Paciente</h2>
                     <div class="column is-10">
@@ -173,7 +173,7 @@
 
                     <h2 class="title is-2">Dados Acompanhante</h2>
 
-                    <div th:each="acomp, index : ${solicitante.getAcompanhantes()}">
+                    <div th:each="acomp, index : ${solicitacao.getAcompanhantes()}">
 
                         <h5 class="title is-5">Acompanhante
                             <span th:text="${index.index + 1}"></span>:
@@ -202,9 +202,9 @@
                     </div>
 
                 </ul>
-                <button type="submit">HAAAAAAAAAAAAAAA</button>
+                <button class="button is-danger" type="submit">salvar</button>
                 <a class="button is-info" href="/solicitacao/casa/lista">Voltar</a>
-            </form>
+            </form:form>
         </div>
 
 
