--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -14,39 +14,44 @@
         </label>
     </nav>
 </header>
+<main>
+    <div class="container">
+        <div class="is-mobile">
+            <h1 class="title is-1 has-text-centered espacamento">Lista de Solicitações da Casa</h1>
+            <div class="is-centered">
+                    <table class="table centralizar espacamento">
+                        <tr>
+                            <th>Data</th>
+                            <th>Nome</th>
+                            <th>Idade</th>
+                            <th>Informações</th>
+                            <th>Inserir no Quarto</th>
+                        </tr>
 
-<div class="panel-block is-mobile">
-    <h1 class="padding-bottom">Lista de Solicitações Casa:</h1>
-    <table class="table pricing__table">
-        <tr class="columns">
-            <td class="column has-text-centered">Data</td>
-            <td class="column has-text-centered">Nome</td>
-            <td class="column has-text-centered">Idade</td>
-            <td class="column has-text-centered">Informações</td>
-            <td class="column has-text-centered"></td>
-        </tr>
-        <tr class="columns" th:each="solicitacao : ${solicitacoesCasa}">
-                <td class="column has-text-centered">19-8-2013</td>
-                <td class="column has-text-centered" th:text="${solicitacao.nome}"></td>
-                <td class="column has-text-centered">24</td>
-                <td class="column has-text-centered">
-                    <a th:href="@{/solicitacao/{id}/dados(id=${solicitacao.id})}">
-                        <button class="button " type="submit">
-                            <i class="fas fa-eye icons-color"></i>
-                        </button>
-                    </a>
-                </td>
-
-                <td>
-                    <a th:href="@{/{id}/quartos/listaQuartos(id=${solicitacao.id})}">
-                        <button class="button " type="submit">
-                            <i>Selecionar quarto</i>
-                        </button>
-                    </a>
-                </td>
+                        <tr th:each="solicitacao : ${solicitacoesCasa}">
+                            <td class="has-text-centered">11-11-2018</td>
+                            <td class="has-text-centered" th:text="${solicitacao.nome}"></td>
+                            <td class="has-text-centered"> 24 </td>
+                            <td class="has-text-centered">
+                                <a th:href="@{/solicitacao/{id}/dados(id=${solicitacao.id})}">
+                                    <button class="button " type="submit">
+                                        <i class="fas fa-eye icons-color"></i>
+                                    </button>
+                                </a>
+                            </td>
+                            <td>
+                                <a th:href="@{/{id}/quartos/listaQuartos(id=${solicitacao.id})}">
+                                    <button class="button" type="submit">
+                                        <i>Selecionar quarto</i>
+                                    </button>
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
             </div>
-        </tr>
-    </table>
-</div>
+        </div>
+    </div>
+</main>
+
 </body>
 </html>
