--- a/app/src/main/resources/templates/editaPaciente.html
+++ b/app/src/main/resources/templates/editaPaciente.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>Hospebem - Dados Paciente</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Formulario</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link href="/css/style.css" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://unpkg.com/pikaday@1.7.0/pikaday.js"></script>
+    <script src="/js/validaIdade.js"></script>
+    <script src="/js/calender.js"></script>
+    <script src="/js/validaCadastroSolicitacao.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/pikaday@1.7.0/css/pikaday.css">
+
 </head>
 <body>
 <main>
@@ -43,16 +54,24 @@
                         </div>
                     </div>
                 </div>
-
-
+                <div class="column">
+                    <div class="field">
+                        <div class="control">
+                            <span>Data de Nascimento:</span>
+                            <input id="dataNascimento" placeholder="Clique para selecionar uma data"
+                                   type="text" class="input input-fancy datepicker-retroativo" th:field="*{dataNascimento}"
+                                   onkeypress="return false;">
+                        </div>
+                    </div>
+                </div>
                 <div class="column is-10">
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
                             <label class="label">Situação</label>
                         </div>
                         <div class="control">
-                                <input th:field="*{situacao}" type="radio" value="pre" id="situacao.pre">
-                                <span>Pré-transplante</span>
+                            <input th:field="*{situacao}" type="radio" value="pre" id="situacao.pre">
+                            <span>Pré-transplante</span>
                             </label>
                             <label>
                                 <input th:field="*{situacao}" type="radio" value="pos" id="situacao.pos">
@@ -66,7 +85,7 @@
                         <div class="control">
                             <span>Data do transplante:</span>
                             <input id="dataTransplante" placeholder="Clique para selecionar uma data"
-                                   type="text" class="input input-fancy datepicker-retroativo" th:field="*{dataTransplante}"
+                                   type="text" class="input input-fancy datepicker-futuro" th:field="*{dataTransplante}"
                                    onkeypress="return false;">
                         </div>
                     </div>
