--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -49,7 +49,7 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>*Data de nascimento:</span>
+                            <span>Data de nascimento:</span>
                             <input id="dataNascimento" placeholder="Clique para selecionar uma data"
                                    type="text" class="input input-fancy datepicker-retroativo" th:field="*{dataNascimento}"
                                    onkeypress="return false" autocomplete="off">
