<@laurascclaro, @matheus-malta> corrige testes

--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -19,7 +19,7 @@
         <div class="is-mobile">
             <h1 class="title is-1 has-text-centered espacamento">Lista de Solicitações da Casa</h1>
             <div class="is-centered">
-                    <table class="table is-striped is-hoverable centralizar espacamento">
+                    <table class="table is-bordered is-striped is-narrow is-hoverable centralizar espacamento">
                         <tr>
                             <th>Data</th>
                             <th>Nome</th>
